--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <body>
     <header>
         <h1>Contacta con Nosotros</h1>
         <p><em>Por Germán García Abril</em></p>
@@ -17,6 +16,7 @@
         <a href="content.html">Mayores empresas de IA</a>
         <a href="contact.html">Contact</a>
     </nav>
+    <section>
     <form>
         <fieldset>
             <legend>Datos personales</legend>
@@ -93,6 +93,7 @@
         <input type="submit" value="Enviar">
         <input type="reset" value="Resetear">
     </form>
-</body>
+</section>
+    
 </body>
 </html>
